# demas

./: .gitignore  NOTES.md  docker-compose.yaml  dockerfile  dummy.json  dummy_data.py  justfile  main.py  makefile  manage.py  output_formats.py  pyproject.toml  settings.py  states.py  utils.py
.cursor/rules/: component.mdc
agents/: composer.py  enhancer.py  reviewer.py  supervisor.py
docs/: BUSINESS_LOGIC.md  ENHANCEMENT_GRAPH.md  TECHNICAL.md
frontend/: components.json  globals.d.ts  package.json  pnpm-lock.yaml  vite-env.d.ts
frontend/api/: api.ts  apiClient.ts  queries.ts  schema.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/data-detail/: SchemaEditor.component.tsx  data-detail.ts  data-detail.types.ts
frontend/app/data-enhancement/: page.tsx
frontend/app/data-overview/: _data-overview.api.ts  _data-overview.queries.ts  data-overview.ts  data-overview.types.ts
frontend/app/data-preview/: DataPreview.component.tsx  data-preview.ts  data-preview.types.ts
frontend/app/data-upload-form/: _data-upload-form.api.ts  data-upload-form.ts  data-upload-form.types.ts
graph/: NOTES.md  dummy.csv  ideas.md  main.py  output_formats.py  states.py
graph/agents/: composer.py  supervisor.py
main/: admin.py  celery.py  serializers.py  tasks.py  urls.py
main/migrations/: 0001_initial.py  0003_originaldata_schema.py
main/views/: enhanced_data.py  original_data.py
models/: enhanced_data.py  original_data.py
src/: settings.py
src/graph/: NOTES.md  main.py  models.py  output_formats.py  utils.py
src/main/: urls.py
(+23 files in other folders)
