[project]
name = "demas-multiagent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.14",
]
